eks-simplest-example-for-appmesh.yaml
apiVersion: appmesh.k8s.aws/v1beta1
kind: VirtualService
metadata:
  name: nginx
spec:
  meshName: MESH_NAME
  virtualRouter:
    name: nginx-router
    listeners:
      - portMapping:
          port: 80
          protocol: http
  routes:
    - name: nginx-route
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            - virtualNodeName: nginx-v1
              weight: 100
            - virtualNodeName: nginx-v2
              weight: 100
---
apiVersion: appmesh.k8s.aws/v1beta1
kind: VirtualService
metadata:
  name: client
spec:
  meshName: MESH_NAME
  virtualRouter:
    name: client-router
    listeners:
      - portMapping:
          port: 80
          protocol: http
  routes:
    - name: client-route
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            - virtualNodeName: client
              weight: 100
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 80
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1
  labels:
    app: nginx-v1-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: nginx-v1-app
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2
  labels:
    app: nginx-v2-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: nginx-v2-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-v1-app
    spec:
      containers:
      - name: nginx-v1
        image: mreferre/nginx-custom-site:latest
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-v2-app
    spec:
      containers:
      - name: nginx-v2
        image:  mreferre/nginx-custom-site:latest
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image:  amazonlinux:2
        command: ["/bin/bash", "-ec", "while :; do echo '.'; sleep 5 ; done"]
        ports:
        - containerPort: 80
